<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="profileViewModel"
            type="com.chillguy.chatzapp.viewmodel.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/go_back"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/arrow_back"
                android:layout_marginStart="12dp"
                android:layout_marginTop="40dp"
                />

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/profile_image"
            android:src="@drawable/login_icon"
            app:strokeWidth="4dp"
            app:strokeColor="@color/white"
            android:padding="8dp"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/CircularImageStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_toolbar"
            android:layout_marginTop="120dp"/>

        <TextView
            android:id="@+id/update_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/update_your_profile"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_name_ti"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="32dp"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="2dp"
            app:hintTextAppearance="@style/FloatingHintTextInputTheme"
            app:hintTextColor="@color/white"
            app:cursorColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/update_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:text="@={profileViewModel.name}"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_name_ti"
            android:layout_marginTop="32dp"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/white"
            android:visibility="gone"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_profile_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="40dp"
            android:text="@string/update"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressBar"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>